Removing direct reference to API Key

--- a/generate-post-content.ipynb
+++ b/generate-post-content.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 96,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -42,7 +42,7 @@
     "        max_tokens=2048,\n",
     "        n=1,\n",
     "        stop=None,\n",
-    "        temperature=0.3,\n",
+    "        temperature=0.9,\n",
     "    )\n",
     "\n",
     "    # Get the first generated content\n",
@@ -98,12 +98,12 @@
     "access_token = auth(credentials) # Authenticate the API\n",
     "\n",
     "# Get OpenAI - API key\n",
-    "openai.api_key = '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'"
+    "openai.api_key = credentials_dict['openai_access_token']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 83,
+   "execution_count": 101,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 84,
+   "execution_count": 103,
    "metadata": {},
    "outputs": [
     {
@@ -125,21 +125,30 @@
      "output_type": "stream",
      "text": [
       "\n",
-      "Estamos vivendo em um mundo cada vez mais digitalizado, e a ciência de dados tem um papel fundamental para ajudar a entender e aproveitar os dados gerados diariamente. Hoje, estou aqui para falar sobre a importância da análise de dados para tomar decisões informadas.\n",
+      "Recentemente, tem havido um grande aumento da adoção de tecnologias de aprendizado de máquina. Estas tecnologias têm sido utilizadas em uma ampla gama de domínios, desde a agricultura até o marketing digital. Como cientista de dados senior, eu tenho sentido a responsabilidade de disseminar informações sobre como essas tecnologias podem ser usadas para solucionar oportunidades de negócios. Hoje compartilho algumas dicas para ajudar quem quer começar a usar aprendizado de máquina:\n",
       "\n",
-      "A análise de dados é uma ferramenta fundamental para ajudar a entender os dados, identificar padrões e tendências, e tomar decisões informadas. É uma área que está crescendo rapidamente, e está sendo usada em todos os setores, desde o governo, empresas, até a saúde.\n",
+      "• Entenda os problemas específicos que você quer resolver antes de começar a usar aprendizado de máquina.\n",
+      "• Examine os dados que você tem à sua disposição para testar seu modelo de aprendizado de máquina.\n",
+      "• Comece com algoritmos simples, como regressão linear, para entender melhor o comportamento dos dados e os padrões que ocorrem neles.\n",
+      "• Utilize técnicas de validação cruzada e avaliação para escolher o melhor modelo para os dados.\n",
+      "• Use as métricas apropriadas para medir o desempenho do seu modelo.\n",
+      "• Teste seu modelo em diferentes conjuntos de dados para melhorar o seu desempenho.\n",
       "\n",
-      "Para aproveitar ao máximo os dados, é importante usar técnicas de análise de dados, como mineração de dados, aprendizado de máquina, análise estatística, entre outras. Essas técnicas podem ajudar a identificar padrões e tendências nos dados, e ajudar a tomar decisões informadas.\n",
-      "\n",
-      "Além disso, é importante usar ferramentas de visualização de dados para ajudar a entender os dados e tornar as análises mais intuitivas. Existem muitas ferramentas de visualização de dados, como Tableau, Power BI, entre outras.\n",
-      "\n",
-      "A ciência de dados é uma área em rápido crescimento, e é importante estar atualizado com as últimas tendências e tecnologias. Espero que este post tenha ajudado a entender a importância da análise de dados para tomar decisões informadas.\n"
+      "Espero que essas dicas sejam úteis para quem quiser começar a usar aprendizado de máquina, e eu ficarei feliz em compartilhar mais recursos. #MachineLearning #DataScience\n"
      ]
     }
    ],
    "source": [
     "generated_text = generate_post(prompt, openai)\n",
-    "print(generated_text)\n",
+    "print(generated_text)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "post_linkedin(access_token, generated_text, headers)"
    ]
   }
